Fixing some issues